; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_index.c_git_index_write_tree.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_index.c_git_index_write_tree.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [80 x i8] c"Failed to write tree. the index file is not backed up by an existing repository\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_index_write_tree(i32* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = icmp ne i32* %7, null
  br i1 %8, label %9, label %12

9:                                                ; preds = %2
  %10 = load i32*, i32** %5, align 8
  %11 = icmp ne i32* %10, null
  br label %12

12:                                               ; preds = %9, %2
  %13 = phi i1 [ false, %2 ], [ %11, %9 ]
  %14 = zext i1 %13 to i32
  %15 = call i32 @assert(i32 %14)
  %16 = load i32*, i32** %5, align 8
  %17 = call i32* @INDEX_OWNER(i32* %16)
  store i32* %17, i32** %6, align 8
  %18 = load i32*, i32** %6, align 8
  %19 = icmp eq i32* %18, null
  br i1 %19, label %20, label %22

20:                                               ; preds = %12
  %21 = call i32 @create_index_error(i32 -1, i8* getelementptr inbounds ([80 x i8], [80 x i8]* @.str, i64 0, i64 0))
  store i32 %21, i32* %3, align 4
  br label %27

22:                                               ; preds = %12
  %23 = load i32*, i32** %4, align 8
  %24 = load i32*, i32** %5, align 8
  %25 = load i32*, i32** %6, align 8
  %26 = call i32 @git_tree__write_index(i32* %23, i32* %24, i32* %25)
  store i32 %26, i32* %3, align 4
  br label %27

27:                                               ; preds = %22, %20
  %28 = load i32, i32* %3, align 4
  ret i32 %28
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32* @INDEX_OWNER(i32*) #1

declare dso_local i32 @create_index_error(i32, i8*) #1

declare dso_local i32 @git_tree__write_index(i32*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
